# adjoint-beta-dist

./: LICENSE  README.md  package.json
Editor/Windows/: AdjointBridgeWindow.uss  MCPSetupWindow.uxml
Editor/Windows/Adjoint/: Adjoint.uss  AdjointChat.uss
Server/: README.md  pyproject.toml
Server/src/: main.py
Server/src/core/: config.py  logging_decorator.py  telemetry.py  telemetry_decorator.py
Server/src/integrations/: __init__.py  elevenlabs_client.py  gemini_image_client.py  meshy_client.py
Server/src/routes/: __init__.py  meshy_webhooks.py
Server/src/services/: custom_tool_service.py
Server/src/services/registry/: __init__.py  resource_registry.py  tool_registry.py
Server/src/services/resources/: __init__.py  active_tool.py  custom_tools.py  editor_state.py  layers.py  menu_items.py  prefab_stage.py  project_info.py  selection.py  tags.py  tests.py  unity_instances.py  windows.py
Server/src/services/tools/: __init__.py  batch_execute.py  debug_request_context.py  execute_custom_tool.py  execute_menu_item.py  find_in_file.py  generate_3d_model.py  generate_audio.py  manage_asset.py  manage_editor.py  manage_gameobject.py  manage_material.py  manage_prefabs.py  manage_scene.py  manage_script.py  manage_shader.py  read_console.py  run_tests.py  script_apply_edits.py  set_active_instance.py  utils.py
Server/src/transport/: plugin_hub.py  unity_instance_middleware.py
Server/src/transport/legacy/: port_discovery.py  stdio_port_registry.py  unity_connection.py
Server/src/utils/: module_discovery.py
shared/: models.json
(+1 files in other folders)
